# barrett_hand

./: README.md
barrett_hand/barrett_hand_control/: CMakeLists.txt  barrett_hand_controllers_plugins.xml
barrett_hand/barrett_hand_control/launch/: barrett_hand_control.launch
barrett_hand/barrett_hand_control/src/: BarrettInterface.cpp  joint_velocity_controller_tactile.cpp
barrett_hand/barrett_hand_hardware_interface/owd/: CMakeLists.txt  ft.hh  openwamdriver.cpp  owd.cpp  tactile.hh
barrett_hand/barrett_hand_hardware_interface/owd/openmath/: Inertia.cc  SE3.hh
barrett_hand/barrett_hand_hardware_interface/owd/openwam/: CANbus.cc  CMakeLists.txt  ConstrainedForceTrajectory.hh  ControlLoop.hh  Dynamics.hh  FK.cc  JSController.cc  MacJointTraj.cc  ParabolicSegment.hh  ServoTraj.cc  gravity.cc  openwamdriver.cpp  wsmove.cc
barrett_hand_control/: CMakeLists.txt  barrett_hand_controllers_plugins.xml  package.xml
barrett_hand_control/config/: barrett_hand_control.yaml
barrett_hand_control/include/barrett_hand_control/: joint_velocity_controller_tactile.cpp  joint_velocity_controller_tactile.h
barrett_hand_control/launch/: barrett_hand_control.launch
barrett_hand_control/owd/: CMakeLists.txt  CMakeLists.txt~  bhd280.cc  bhd280.hh  find_xenomai.cmake  ft.cc  ft.hh  tactile.cc  tactile.hh
barrett_hand_control/owd/openmath/: CMakeLists.txt  R4.hh  R6.hh  SO3.hh  main.cc
barrett_hand_control/owd/openmath/.svn/: entries
barrett_hand_control/owd/openmath/.svn/text-base/: R3.hh.svn-base  SO3.cc.svn-base  ZYX.hh.svn-base
barrett_hand_control/owd/openwam/: Butterworth.h  CANbus.cc  CANbus.cc~  CANbus.hh  CANbus_sim.cc  CMakeLists.txt  CMakeLists.txt~  ControlLoop.cc  ControlLoop.hh~  DataPlotterAll.pl  DataRecorder.cc  JSController.hh  JointCtrl.hh  Kinematics.hh  MacQuinticElement.hh  Motor.hh  MultiSync.hh  ParaJointTraj.hh  Plugin.cc~  Plugin.hh  Puck.hh  ServoTraj.hh  Sigmoid.hh  StepTraj.cc  StepTraj.hh  TrajType.cc  Trajectory.cc  Trajectory.hh  bus.cc  globals.h  jpos.cc  mac_traj2_test.cc  mac_traj_test.cc  openwamdriver.h  sim_plotter.pl
barrett_hand_control/owd/openwam/.svn/: all-wcprops  entries
barrett_hand_control/owd/openwam/.svn/text-base/: BinaryData.hh.svn-base  CANbus.hh.svn-base  CANdefs.hh.svn-base  ControlLoop.hh.svn-base  Controller.hh.svn-base  Dynamics.cc.svn-base  Group.cc.svn-base  Joint.hh.svn-base  JointCtrlPID.hh.svn-base  Kinematics.cc.svn-base  MacAccelPulse.hh.svn-base  MacJointTraj.hh.svn-base  Motor.cc.svn-base  (+15 more)
barrett_hand_control/owd_msgs/: package.xml
barrett_hand_control/owd_msgs/.svn/: all-wcprops  dir-prop-base  entries
barrett_hand_control/owd_msgs/.svn/text-base/: CMakeLists.txt.svn-base  manifest.xml.svn-base
barrett_hand_control/owd_msgs/msg/: BHTactile.msg  ForceRead.msg  JointTraj.msg  PIDgains.msg  Servo.msg  WAMInternals.msg  WAMState.msg  WamSetupSeaCtrl.msg
barrett_hand_control/owd_msgs/msg/.svn/: all-wcprops  entries
barrett_hand_control/owd_msgs/msg_gen/lisp/: ApplyForceDebug.lisp  BHState.lisp  BHTactile.lisp  ForceRead.lisp  ForceState.lisp  IndexedJointValues.lisp  Jacobian.lisp  JointTraj.lisp  Joints.lisp  MassProperties.lisp  PIDgains.lisp  Servo.lisp  TrajInfo.lisp  WAMInternals.lisp  WAMState.lisp  WamSetupSeaCtrl.lisp  _package.lisp  _package_ApplyForceDebug.lisp  _package_BHState.lisp  _package_BHTactile.lisp  _package_ForceRead.lisp  _package_ForceState.lisp  _package_Jacobian.lisp  _package_JointTraj.lisp  _package_Joints.lisp  _package_MassProperties.lisp  _package_PIDgains.lisp  _package_Servo.lisp  _package_TrajInfo.lisp  _package_WAMInternals.lisp  _package_WAMState.lisp  _package_WamSetupSeaCtrl.lisp  owd_msgs-msg.asd
barrett_hand_control/owd_msgs/srv/: ApplyForce.srv  GetHandProperty.srv  GetSpeed.srv  SetExtraMass.srv  SetGains.srv  SetHandProperty.srv  SetJointStiffness.srv  SetSpeed.srv  SetStallSensitivity.srv  SetStiffness.srv  SetTactileInputThreshold.srv  SetTorqueLimits.srv  StartMoveDirection.srv  StepJoint.srv
barrett_hand_control/owd_msgs/srv/.svn/: all-wcprops  entries
barrett_hand_control/owd_msgs/srv_gen/lisp/: AddTimedTrajectory.lisp  AddTrajectory.lisp  AddWSTraj.lisp  ApplyEEForceTorque.lisp  ApplyForce.lisp  CalibrateJoints.lisp  CancelAllTrajectories.lisp  DeleteTrajectory.lisp  GetDOF.lisp  GetHandProperty.lisp  GetSpeed.lisp  GetStallSensitivity.lisp  GetStiffness.lisp  InsertKey.lisp  MoveHand.lisp  OpenDoor.lisp  PauseTrajectory.lisp  RelaxHand.lisp  ReplaceTrajectory.lisp  Reset.lisp  ResetFinger.lisp  ResetHand.lisp  SetController.lisp  SetExtraMass.lisp  SetFingerCompliant.lisp  SetForceInputThreshold.lisp  SetGains.lisp  SetHandProperty.lisp  SetHandTorque.lisp  SetJointOffsets.lisp  SetJointStiffness.lisp  SetSpeed.lisp  SetStallSensitivity.lisp  SetStiffness.lisp  SetTactileInputThreshold.lisp  SetTorqueLimits.lisp  StartHelixTraj.lisp  StartMoveDirection.lisp  StartTeleop.lisp  StepJoint.lisp  (+44 more)
barrett_hand_control/scripts/: move_hand.py  move_hand.py~
barrett_hand_control/src/: MoveHandActionServer.cpp  MoveHandActionServer.cpp~
barrett_hand_hardware_interface/: CMakeLists.txt  package.xml
barrett_hand_hardware_interface/config/: config.yaml
barrett_hand_hardware_interface/include/barrett_hand_hardware_interface/: BarrettHandHardwareInterface.h
barrett_hand_hardware_interface/launch/: barrett_hand_hardware_interface.launch  move_bhand.launch
barrett_hand_hardware_interface/owd/: CMakeLists.txt  bhd280.cc  bhd280.hh  ft.hh  openwamdriver.cpp  openwamdriver.h
barrett_hand_hardware_interface/owd/openmath/: SE3.cc
barrett_hand_hardware_interface/owd/openmath/.svn/: all-wcprops
barrett_hand_hardware_interface/owd/openwam/: CANbus.cc  CANbus.hh  ConstrainedForceTrajectory.cc  DH.hh  DataPlotter.pl  JointsTraj.hh  MacQuinticSegment.cc  ParaJointTraj.cc  Plugin.cc  PulseTraj.hh  WAM.cc  detect_cpu.cmake  dump.cc  mac_plotter.pl
barrett_hand_hardware_interface/src/: BarrettHandHardwareInterface.cpp  Robot.cpp
barrett_hand_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml
barrett_hand_msgs/action/: MoveHand.action  MoveHand.action~
(+249 files in other folders)
