<?xml version="1.0"?>
<package>
  <name>owd_msgs</name>
  <version>0.0.1</version>
  <description>
     This package provides the messages and services used by the
     Open WAM Driver.
  </description>
  <maintainer email="vandeweg@cmu.edu">Mike Vande Weghe</maintainer>
  <license>LGPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
